Incluido webpack na aplicacao.
Incluido um servidor do webpack para desenvolvimento.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-loader": "^8.1.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5"
   }
 }
